2006-06-10  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk2670_FILES): Remove GuiObject.java.
	(frysk2670/gcj.sh): Explicitly check for exit status.
	* frysk2670/LiaisonItem.java: Merge in GuiObject.java.
	* frysk2670/AddTaskObserverAction.java: Update.
	* frysk2670/ExitNotificationObserver.java: Update.
	
	* Makefile.am (frysk2670/gcj.sh): Use frysk2670_FILES.
	(frysk2670_FILES): Add LiaisonItem.java, Event.java, and
	GuiObject.java.
	* frysk2670/LiaisonItem.java: Copy from frysk-gui, trim down.
	* frysk2670/Event.java: Ditto.
	* frysk2670/GuiObject.java: Ditto.

2006-06-09  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk2670/gcj.sh): Use $(GCJ), not gcj; add -d
	. and -I . to GCJ.
	* frysk2670/ExitNotificationObserver.java: Simplify.
	* frysk2670/AddTaskObserverAction.java: Simplify.
	* frysk2670/TaskAction.java: Simplify.
	
	* Makefile.am (frysk2670_FILES): Drop frysk2670/files0.list and
	frysk2670/files.list.
	(frysk2670/gcj.sh): List files explicitly.
	* frysk2670/files0.list: Delete.
	* frysk2670/files.list: Delete.

	* Makefile.am (frysk2137/Gcov.sh): Replace frysk2137/Gcj.sh, runs
	gcov; mark as PASS.
	* frysk2137/Gcov.java: Rename frysk2137/Hello.java

2006-06-06  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (frysk2670_FILES): Fix typo, add remaining files.

2006-05-24  Stan Cox  <scox@redhat.com>

	* Makefile.am (frysk2670/gcj.sh): Copy files explicitly.

2006-05-23  Stan Cox <scox@redhat.com>

	* Makefile.am (frysk2670/gcj.sh): Add rules.
	* frysk2670/AddTaskObserverAction.java: New.
	* frysk2670/ExitNotificationObserver.java: New.
	* frysk2670/TaskAction.java: New.
	* frysk2670/frysk.jar: New.

2006-05-09  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (CLEANFILES): Delete *.gcno files created by gcc.

2006-05-08  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk1986_FILES): Fix paths to U.java and T.java.

2006-05-02  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk2630/noerror.sh, frysk2631/ice.sh): Add rules.